Fix animation overflow bug

--- a/music/style.css
+++ b/music/style.css
@@ -150,7 +150,7 @@ ul{
 
 @media (max-width:600){
     .third-page .singer-intro{
-        max-width: 150px;
+        max-width: 30%;
         color: white;
         font-size: 16px;
         transition-duration: 1.5s;
